src/main/resources/sf-resource/SfServerPkgs/objects/ReleaseEnvironment__c.object
<CustomObject>
    <fields>
        <fullName>Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment</label>
        <referenceTo>Enviroment__c</referenceTo>
        <relationshipLabel>ReleaseEnvironments</relationshipLabel>
        <relationshipName>Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Releases__c</fullName>
        <label>Releases</label>
        <referenceTo>Releases__c</referenceTo>
        <relationshipLabel>Environments</relationshipLabel>
        <relationshipName>ReleaseEnvironments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ReleaseEnvironment</label>
    <nameField>
        <displayFormat>RE-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ReleaseEnvironments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>